Camino only - Bug 354996: Punycode domains when storing them in the keychain. r=josh sr=pink